# storage/api-docs/api-docs.json
@@ -11,7 +11,7 @@
                     "회원"
                 ],
                 "summary": "토큰 생성",
-                "operationId": "aa5d75fb9e16c6607cb0742e8ad6affd",
+                "operationId": "454723b1fd9b174ccdcd0c2ae313f780",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -29,6 +29,67 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/SuccessTokenResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid input",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/400ErrorResponse"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/500ErrorResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/product/list": {
+            "post": {
+                "tags": [
+                    "상품"
+                ],
+                "summary": "상품 리스트",
+                "operationId": "51179581ee36364e27baaeb10f5e6ac2",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/ProductListSchema"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/SuccessResponse"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Authorization Error",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/401ErrorResponse"
                                 }
                             }
                         }
@@ -158,6 +219,41 @@
                 },
                 "type": "object"
             },
+            "404ErrorResponse": {
+                "properties": {
+                    "status": {
+                        "type": "integer",
+                        "example": 404
+                    },
+                    "meta": {
+                        "properties": {
+                            "timestamp": {
+                                "type": "string",
+                                "example": "2023-12-19 17:45:50"
+                            },
+                            "apiVersion": {
+                                "type": "string",
+                                "example": "v1"
+                            }
+                        },
+                        "type": "object"
+                    },
+                    "error": {
+                        "properties": {
+                            "code": {
+                                "type": "integer",
+                                "example": 404
+                            },
+                            "message": {
+                                "type": "string",
+                                "example": "잘못된 접근입니다."
+                            }
+                        },
+                        "type": "object"
+                    }
+                },
+                "type": "object"
+            },
             "500ErrorResponse": {
                 "properties": {
                     "status": {
@@ -185,7 +281,7 @@
                             },
                             "message": {
                                 "type": "string",
-                                "example": "관리자에 문의 바랍니다."
+                                "example": "Too many requests"
                             }
                         },
                         "type": "object"
@@ -239,6 +335,40 @@
                     }
                 },
                 "type": "object"
+            },
+            "ProductListSchema": {
+                "required": [
+                    "page",
+                    "pageSize",
+                    "orderBy",
+                    "direction"
+                ],
+                "properties": {
+                    "page": {
+                        "type": "integer",
+                        "example": 1
+                    },
+                    "pageSize": {
+                        "type": "string",
+                        "example": 40
+                    },
+                    "orderBy": {
+                        "type": "string",
+                        "example": "prd_name"
+                    },
+                    "direction": {
+                        "type": "string",
+                        "example": "desc"
+                    }
+                },
+                "type": "object"
+            }
+        },
+        "securitySchemes": {
+            "BearerAuth": {
+                "type": "http",
+                "bearerFormat": "JWT",
+                "scheme": "bearer"
             }
         }
     }
